tests/baselines/reference/moduleVariableArrayIndexer.errors.txt
moduleVariableArrayIndexer.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleVariableArrayIndexer.ts(3,13): error TS18050: The value 'undefined' cannot be used here.


==== moduleVariableArrayIndexer.ts (2 errors) ====
    module Bar {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var a = 1;
        var t = undefined[a][a]; // CG: var t = undefined[Bar.a][a];
                ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    }
    